--- a/src/sass/modules/home/home/_header.scss
+++ b/src/sass/modules/home/home/_header.scss
@@ -39,7 +39,7 @@ header{
         gap: 10vh;
         transition: 0.5s;
         height: 100% !important;
-        z-index: 1 !important;
+        z-index: 400 !important;
         width: 70%;
         padding-top: 10vh !important;
     }
